[gd_scene load_steps=3 format=2]

[ext_resource path="res://NetworkSetup.gd" type="Script" id=1]
[ext_resource path="res://UI/Fonts/NugieRomantic_64.tres" type="DynamicFont" id=2]

[node name="NetworkSetup" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="MultiplayerConfigure" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="CreateServer" type="Button" parent="MultiplayerConfigure"]
margin_left = 692.5
margin_top = 338.0
margin_right = 1227.5
margin_bottom = 514.0
custom_fonts/font = ExtResource( 2 )
text = "Create Server"

[node name="JoinServer" type="Button" parent="MultiplayerConfigure"]
margin_left = 692.5
margin_top = 564.0
margin_right = 1227.5
margin_bottom = 740.0
custom_fonts/font = ExtResource( 2 )
text = "Join Server"

[node name="Back" type="Button" parent="MultiplayerConfigure"]
margin_left = 855.0
margin_top = 835.0
margin_right = 1055.0
margin_bottom = 935.0
custom_fonts/font = ExtResource( 2 )
text = "Back"

[node name="ServerIPAdress" type="LineEdit" parent="MultiplayerConfigure"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -422.5
margin_top = 117.0
margin_right = 422.5
margin_bottom = 221.0
custom_fonts/font = ExtResource( 2 )
align = 1
placeholder_text = "Enter IP Address"

[node name="DeviceIPAddress" type="Label" parent="."]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -150.0
custom_fonts/font = ExtResource( 2 )
align = 1
valign = 1

[connection signal="pressed" from="MultiplayerConfigure/CreateServer" to="." method="_on_CreateServer_pressed"]
[connection signal="pressed" from="MultiplayerConfigure/JoinServer" to="." method="_on_JoinServer_pressed"]
[connection signal="pressed" from="MultiplayerConfigure/Back" to="." method="_on_Back_pressed"]
